kubernetes/mariadb-galera/overlays/k3s/traefik.yaml
# Loses Source IP if Pod Node Differs from Incoming Traffic Node
# Using Wildcard: Only IngressRouteTCP Using Port 3306
# Not Using With HaProxy
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mariadb
  namespace: mariadb-galera
  labels:
    app.kubernetes.io/instance: mariadb-galera
spec:
  entryPoints:
    - mariadb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mariadb
          port: 3306
